// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cookbook: relationship-styles - styling all relationships > generates expected DSL 1`] = `
"workspace "RelationshipStyles" {
  model {
    // Elements
    a = softwareSystem "A" {
      tags "Element" "Software System"
    }
    b = softwareSystem "B" {
      tags "Element" "Software System"
    }
    c = softwareSystem "C" {
      tags "Element" "Software System"
    }
    // Relationships
    a -> b "uses" {
      tags "Relationship"
    }
    b -> c "uses" {
      tags "Relationship"
    }
  }
  views {
    // System Landscape Views
    systemLandscape "Landscape" {
      description "Relationship styles example."
      include *
      autoLayout lr
    }
    // System Context Views
    // Container Views
    // Component Views
    styles {
      relationship "Relationship" {
        color "#ff0000"
        style solid
      }
    }
  }
}
"
`;

exports[`cookbook: relationship-styles - styling individual relationships > generates expected DSL 1`] = `
"workspace "IndividualRelationshipStyles" {
  model {
    // Elements
    a = softwareSystem "A" {
      tags "Element" "Software System"
    }
    b = softwareSystem "B" {
      tags "Element" "Software System"
    }
    c = softwareSystem "C" {
      tags "Element" "Software System"
    }
    // Relationships
    a -> b "uses" {
      tags "Relationship"
    }
    b -> c "uses" {
      tags "Tag 1" "Relationship"
    }
  }
  views {
    // System Landscape Views
    systemLandscape "Landscape" {
      description "Individual relationship styles."
      include *
      autoLayout lr
    }
    // System Context Views
    // Container Views
    // Component Views
    styles {
      relationship "Tag 1" {
        color "#ff0000"
        style solid
      }
    }
  }
}
"
`;
